--- a/Frontend/src/components/order/index.css
+++ b/Frontend/src/components/order/index.css
@@ -102,7 +102,7 @@ h1::after {
     }
 
     .brickSelect {
-        height: calc(4/3 * 40vw + 4vh);
+        height: calc(4/3 * 40vw + max(4vh, 30px));
         left: calc(80vw + 10px);
         width: 4.5vw !important;
     }
@@ -122,7 +122,7 @@ h1::after {
     }
 
     .brickSelect {
-        height: calc(4/3 * 35vw + 4vh);
+        height: calc(4/3 * 35vw + max(4vh, 30px));
         left: calc(70vw + 10px);
         width: 4vw !important;
     }
@@ -141,14 +141,13 @@ h1::after {
     }
 
     .brickSelect {
-        height: calc(4/3 * 30vw + 4vh);
+        height: calc(4/3 * 30vw + max(4vh, 30px));
         left: calc(60vw + 10px);
         width: 4vw !important;
     }
 }
 
 @media screen and (min-width: 1200px) {
-
     #flexboxGallery {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 1fr);
@@ -161,7 +160,7 @@ h1::after {
     }
 
     .brickSelect {
-        height: calc(4/3 * 25vw + 4vh);
+        height: calc(4/3 * 25vw + max(4vh, 30px));
         left: calc(50vw + 10px);
         width: 3vw !important;
     }
@@ -185,7 +184,7 @@ h1::after {
     }
 
     .brickSelect {
-        height: calc(4/3 * 25vw + 4vh);
+        height: calc(4/3 * 25vw + max(4vh, 30px));
         left: calc(50vw + 10px);
     }
 
@@ -211,7 +210,7 @@ h1::after {
     }
 
     .brickSelect {
-        height: calc(4/3 * 25vw + 4vh);
+        height: calc(4/3 * 25vw + max(4vh, 30px));
         left: calc(50vw + 10px);
     }
 
@@ -279,14 +278,15 @@ h1::after {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
-    overflow: auto;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 1);
 
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 0;
+
+    overflow-y: auto;
 }
 
 .lightboxImg {
@@ -300,7 +300,7 @@ h1::after {
     position: absolute;
     top: calc(32%);
     left: calc(0vh);
-    font-size: 5vh;
+    font-size: max(5vh, 40px);
     border-radius: 0 1vh 1vh 0;
     background-color: transparent;
 
@@ -319,7 +319,7 @@ h1::after {
     position: absolute;
     top: calc(32%);
     right: calc(0vh);
-    font-size: 5vh;
+    font-size: max(5vh, 40px);
     border-radius: 1vh 0 0 1vh;
     background-color: transparent;
 
@@ -340,6 +340,8 @@ h1::after {
     background-color: lightgray;
 
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    min-height: 30px;
+
 }
 
 .incrementButton {
@@ -347,22 +349,22 @@ h1::after {
     object-fit: cover;
     outline: none;
     width: 9%;
-    height: 4vh;
     border: none;
-    font-size: 2vh;
+    font-size: calc(max(2vh, 14px));
     display: inline-block;
 
 }
 
 #displayCounter {
     object-fit: cover;
-    font-size: 2vh;
+    font-size: calc(max(2vh, 14px));
     display: inline-block;
     width: 32%;
-    height: 4vh;
+    height: 100%;
 
     box-sizing: border-box;
     text-align: center;
+    
 }
 
 #modalCaption {
@@ -395,7 +397,6 @@ h1::after {
 }
 
 .modalContent {
-    background-color: gray;
     width: 50vw;
     position: relative;
 }
@@ -472,3 +473,18 @@ h1::after {
     background-image: linear-gradient(90deg, #b77456 0 30%, #6c6461 30% 70%, #7d493b 70% 100%)
 }
 
+@media screen and (max-height: 450px) and (max-width: 1000px) {
+
+    .modal {
+        align-items: stretch !important;
+    }
+    
+}
+
+@media screen and (max-height: 475px) and (min-width: 1000px) {
+
+    .modal {
+        align-items: stretch !important;
+    }
+    
+}
